# ayurl

./: Cargo.toml  README.md
src/: cli.rs  client.rs  error.rs  lib.rs  main.rs  progress.rs  request.rs  response.rs  scheme.rs  uri.rs
src/handlers/: file.rs  http.rs  mod.rs  scp.rs  sftp.rs  ssh_common.rs
tests/: cli_tests.rs  client_tests.rs  file_handler.rs  http_tests.rs  ipv6_tests.rs  pty_tests.rs  request_tests.rs  response_tests.rs  scheme_tests.rs  scp_sftp_tests.rs  ssh_common_tests.rs  uri_parse_tests.rs
tests/fixtures/: test_key_ed25519  test_key_ed25519.pub
