[package]
name = "ayurl"
version = "0.1.0"
edition = "2024"
description = "Async URI-based data transfer library - get and put data regardless of location"

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
thiserror = "2.0"
bytes = "1"
tracing = "0.1"
async-trait = "0.1"
url = "2"
pin-project-lite = "0.2"
tokio-util = { version = "0.7", features = ["compat"] }

tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.0", features = ["derive"] }
rpassword = "7"

reqwest = { version = "0.12", features = ["stream"], optional = true }
# ayssh = { path = "../ayssh", optional = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
axum = "0.8"
base64 = "0.22"

[features]
default = ["file", "http"]
file = []
http = ["dep:reqwest"]
# scp = ["dep:ayssh"]
